feat: 하객 축의금 내역 response 변경
issue: #33