@@ -1,12 +1,15 @@
 package com.kestrel.weddingbookkeeper.api.wedding.service.impl;
 
 import com.kestrel.weddingbookkeeper.api.member.dao.MemberDao;
+import com.kestrel.weddingbookkeeper.api.member.exception.InvalidRoleNameException;
 import com.kestrel.weddingbookkeeper.api.member.exception.MemberNotFoundException;
 import com.kestrel.weddingbookkeeper.api.member.exception.UnsupportedGenderTypeException;
 import com.kestrel.weddingbookkeeper.api.member.vo.Member;
+import com.kestrel.weddingbookkeeper.api.member.vo.Role;
 import com.kestrel.weddingbookkeeper.api.wedding.dao.MemberWeddingDao;
 import com.kestrel.weddingbookkeeper.api.wedding.dto.response.DonationReceiptResponse;
-import com.kestrel.weddingbookkeeper.api.wedding.dto.response.DonationsReceiptResponse;
+import com.kestrel.weddingbookkeeper.api.wedding.dto.response.DonationReceiptsResponse;
+import com.kestrel.weddingbookkeeper.api.wedding.dto.response.GuestDonationReceiptsResponse;
 import com.kestrel.weddingbookkeeper.api.wedding.factory.WeddingFactory;
 import com.kestrel.weddingbookkeeper.api.wedding.vo.MemberWedding;
 import com.kestrel.weddingbookkeeper.api.wedding.dao.WeddingDao;
@@ -28,7 +31,6 @@ import com.kestrel.weddingbookkeeper.api.wedding.exception.WeddingInfomationNotU
 import com.kestrel.weddingbookkeeper.api.wedding.service.WeddingService;
 import com.kestrel.weddingbookkeeper.api.wedding.vo.Wedding;
 import java.util.List;
-import java.util.stream.Collectors;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
@@ -115,21 +117,21 @@ public class WeddingServiceImpl implements WeddingService {
     public DonationReceiptsResponse selectDonationList(Integer memberId) {
         List<MemberWedding> memberWeddings = memberWeddingDao.selectDonationList(memberId);
         List<DonationReceiptResponse> response = memberWeddings.stream()
-                .map(memberWedding -> new DonationReceiptResponse(memberWedding)).collect(Collectors.toList());
+                .map(DonationReceiptResponse::new).toList();
         return new DonationReceiptsResponse(response);
     }
 
     @Override
-    public List<MemberWedding> selectGuestList(Integer weddingId, Boolean hasPaid) {
-        if (hasPaid == null) {
-            List<MemberWedding> list = memberWeddingDao.selectGuestListByAdmin(weddingId);
-            return list;
+    public GuestDonationReceiptsResponse getWeddingGuestsInformation(Integer weddingId, Role role) {
+        if (role == Role.MANAGER) {
+            List<MemberWedding> memberWeddings = memberWeddingDao.selectGuestsByWeddingId(weddingId);
+            return new GuestDonationReceiptsResponse(memberWeddings);
         }
-        if (hasPaid) {
-            List<MemberWedding> list = memberWeddingDao.selectGuestListByCouple(weddingId);
-            return list;
+        if (role == Role.PARTNER) {
+            List<MemberWedding> memberWeddings = memberWeddingDao.selectGuestsByWeddingIdAndHasPaid(weddingId);
+            return new GuestDonationReceiptsResponse(memberWeddings);
         }
-        return null;
+        throw new InvalidRoleNameException();
     }
 
     @Override
